--- a/mtcdt-station.conf
+++ b/mtcdt-station.conf
@@ -41,7 +41,6 @@
     "log_file": "stderr",
     "log_level": "INFO",
     "log_size": 100000,
-    "log_rotate": 3,
-    "TC_TIMEOUT": "2s"
+    "log_rotate": 3
   }
 }
