--- a/mtcdt-station.conf
+++ b/mtcdt-station.conf
@@ -40,7 +40,7 @@
     "euiprefix": "::0",
     "log_file": "stderr",
     "log_level": "INFO",
-    "log_size": 100000,
-    "log_rotate": 3
+    "log_size": 1000000,
+    "log_rotate": 0
   }
 }
