Update mtcap-station.conf - disable pps

--- a/mtcap-station.conf
+++ b/mtcap-station.conf
@@ -2,7 +2,7 @@
   "SX1301_conf": {
     "lorawan_public": true,
     "clksrc": 0,
-    "pps": true,
+    "pps": false,
     "device": "/dev/spidev0.0",
     "chan_FSK": {"bandwidth": 125000, "datarate": 50000, "enable": true, "if": 300000, "radio": 0},
     "chan_Lora_std": {"bandwidth": 250000, "enable": true, "if": -200000, "radio": 0, "spread_factor": 7},
